2001-11-16  Ben Harris  <bjh21@netbsd.org>

	* Makefile.in (os9kread.o): Replace $< with autoconf-approved
	$(srcdir)/....
	(procfs.o): Ditto.
	(z8k-tdep.o): Ditto.

2001-11-16  Ben Harris  <bjh21@netbsd.org>

	* MAINTAINERS (write-after-approval): Add self.

2001-11-15  Jim Blandy  <jimb@redhat.com>

	* s390-tdep.c (is_simple_arg): Structs and unions exactly eight
	bytes long should be handled as DOUBLE_ARGs; don't recognize them
	as SIMPLE_ARGs.

2001-11-12  Andrew Cagney  <ac131313@redhat.com>

	* remote.c (struct packet_reg): Declare.
	(struct remote_state): Add fields sizeof_g_packet and g_packet.
	(init_remote_state): Initialize sizeof_g_packet and g_packet.
	(free_remote_state): Free g_packet.
	(packet_reg_from_pnum, packet_reg_by_regnum): New functions.
	(remote_wait): Use above instead of gdbarch methods
	REGISTER_RAW_SIZE and REGISTER_BYTES.
	(remote_async_wait): Ditto.
	(remote_fetch_registers, remote_store_registers): Ditto.
	(store_register_using_P): Ditto.
	
2001-11-15  Andrew Cagney  <ac131313@redhat.com>

	* remote.c (_initialize_remote): Don't multi-arch swap tty_input.
	Second attempt.

2001-11-15  Andrew Cagney  <ac131313@redhat.com>

	* utils.c (phex_nz): For default case, set str to phex_nz return
	value.
	(phex): Ditto.

2001-11-15  Andrew Cagney  <ac131313@redhat.com>

	* TODO (register_buffer): Delete.
	* regcache.c (register_buffer): Make static.
	(regcache_collect): New function.
	* regcache.h (register_buffer): Delete declaration.
	(regcache_collect): Declare.
	* remote.c (store_register_using_P): Rewrite using
	regcache_collect.
	(remote_store_registers): Ditto.
	* go32-nat.c (store_register): Ditto.

2001-11-14  Andrew Cagney  <ac131313@redhat.com>

	* remote.c (struct remote_state): Declare.
	(get_remote_state): New function.
	(init_remote_state): New function.
	(remote_gdbarch_data_handle): New global.
	(build_remote_packet_sizes): Delete function, moved to
	init_remote_state.
	(register_remote_packet_sizes): Delete function.